{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 3848,
  "lineage": "568e194b-0613-836c-b14e-77061e9e1d31",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ERPLY",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05ff45cfa6792bcbc",
            "arn": "arn:aws:ec2:us-west-1:131289783853:instance/i-0a45a42376699a838",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a45a42376699a838",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "calkeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0584fb376263de759",
            "private_dns": "ip-172-0-3-212.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.0.3.212",
            "public_ip": "54.219.167.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-075d21982e081fd44",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f3936960ec4e570",
            "tags": {
              "Name": "ERPLY-0"
            },
            "tags_all": {
              "Name": "ERPLY-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02cbc9f977c504002"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc_prod_secgrp",
            "aws_subnet.vpc_prod_subnet1",
            "aws_vpc.vpc_prod",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05ff45cfa6792bcbc",
            "arn": "arn:aws:ec2:us-west-1:131289783853:instance/i-0ecc9265b3a3290ac",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ecc9265b3a3290ac",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "calkeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05459e1a59f155dd6",
            "private_dns": "ip-172-0-6-90.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.0.6.90",
            "public_ip": "54.67.4.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08cc7994b9a900d34",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f3936960ec4e570",
            "tags": {
              "Name": "ERPLY-1"
            },
            "tags_all": {
              "Name": "ERPLY-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02cbc9f977c504002"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc_prod_secgrp",
            "aws_subnet.vpc_prod_subnet1",
            "aws_vpc.vpc_prod",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05ff45cfa6792bcbc",
            "arn": "arn:aws:ec2:us-west-1:131289783853:instance/i-0a9e6693a9ac400d2",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a9e6693a9ac400d2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "calkeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a41ab6a14d600192",
            "private_dns": "ip-172-0-18-103.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.0.18.103",
            "public_ip": "3.101.141.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-038a0c87e955b67b3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f3936960ec4e570",
            "tags": {
              "Name": "ERPLY-2"
            },
            "tags_all": {
              "Name": "ERPLY-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02cbc9f977c504002"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc_prod_secgrp",
            "aws_subnet.vpc_prod_subnet1",
            "aws_vpc.vpc_prod",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_prod_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131289783853:internet-gateway/igw-06c7502ee44fe5771",
            "id": "igw-06c7502ee44fe5771",
            "owner_id": "131289783853",
            "tags": {
              "Name": "vpc_prod_igw"
            },
            "tags_all": {
              "Name": "vpc_prod_igw"
            },
            "vpc_id": "vpc-0c82db5e18b7d4606"
          },
          "dependencies": [
            "aws_vpc.vpc_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_prod_route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131289783853:route-table/rtb-0bdb5d8b1633a4adb",
            "id": "rtb-0bdb5d8b1633a4adb",
            "owner_id": "131289783853",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06c7502ee44fe5771",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c82db5e18b7d4606"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpc_prod_igw",
            "aws_vpc.vpc_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_prod_route2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131289783853:route-table/rtb-063887799a5db4849",
            "id": "rtb-063887799a5db4849",
            "owner_id": "131289783853",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06c7502ee44fe5771",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c82db5e18b7d4606"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpc_prod_igw",
            "aws_vpc.vpc_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0912ee78f61585a1e",
            "route_table_id": "rtb-0bdb5d8b1633a4adb",
            "subnet_id": "subnet-07f3936960ec4e570"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_prod_igw",
            "aws_route_table.vpc_prod_route1",
            "aws_subnet.vpc_prod_subnet1",
            "aws_vpc.vpc_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-route2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e91a2e8514b581d",
            "route_table_id": "rtb-063887799a5db4849",
            "subnet_id": "subnet-0d64d10aebb275af5"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_prod_igw",
            "aws_route_table.vpc_prod_route2",
            "aws_subnet.vpc_prod_subnet2",
            "aws_vpc.vpc_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-route3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072c8ef6896c2639b",
            "route_table_id": "rtb-0bdb5d8b1633a4adb",
            "subnet_id": "subnet-08afb4a78ffa31b86"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_prod_igw",
            "aws_route_table.vpc_prod_route1",
            "aws_subnet.vpc_prod_subnet3",
            "aws_vpc.vpc_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-route4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031ba82574801926a",
            "route_table_id": "rtb-063887799a5db4849",
            "subnet_id": "subnet-0af1a80f3c0e42c61"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_prod_igw",
            "aws_route_table.vpc_prod_route2",
            "aws_subnet.vpc_prod_subnet4",
            "aws_vpc.vpc_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_prod_secgrp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131289783853:security-group/sg-02cbc9f977c504002",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02cbc9f977c504002",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH into VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Secured TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC server",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "k8s",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "vpc_prod_secgrp",
            "name_prefix": "",
            "owner_id": "131289783853",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c82db5e18b7d4606"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_prod_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131289783853:subnet/subnet-07f3936960ec4e570",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f3936960ec4e570",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "131289783853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_prod_subnet1",
              "kubernetes.io/cluster/erply": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "vpc_prod_subnet1",
              "kubernetes.io/cluster/erply": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c82db5e18b7d4606"
          },
          "dependencies": [
            "aws_vpc.vpc_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_prod_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131289783853:subnet/subnet-0d64d10aebb275af5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d64d10aebb275af5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "131289783853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_prod_subnet2",
              "kubernetes.io/cluster/erply": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "vpc_prod_subnet2",
              "kubernetes.io/cluster/erply": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c82db5e18b7d4606"
          },
          "dependencies": [
            "aws_vpc.vpc_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_prod_subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131289783853:subnet/subnet-08afb4a78ffa31b86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08afb4a78ffa31b86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "131289783853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_prod_subnet3",
              "kubernetes.io/cluster/erply": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "vpc_prod_subnet3",
              "kubernetes.io/cluster/erply": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c82db5e18b7d4606"
          },
          "dependencies": [
            "aws_vpc.vpc_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_prod_subnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131289783853:subnet/subnet-0af1a80f3c0e42c61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af1a80f3c0e42c61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "131289783853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_prod_subnet4",
              "kubernetes.io/cluster/erply": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "vpc_prod_subnet4",
              "kubernetes.io/cluster/erply": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c82db5e18b7d4606"
          },
          "dependencies": [
            "aws_vpc.vpc_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:131289783853:vpc/vpc-0c82db5e18b7d4606",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.0.0.0/16",
            "default_network_acl_id": "acl-030c267591b63fd9a",
            "default_route_table_id": "rtb-0a3e0f5c3b293eb91",
            "default_security_group_id": "sg-05bcc6303eb5dbec4",
            "dhcp_options_id": "dopt-0ddfb747c9b61a0ea",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c82db5e18b7d4606",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a3e0f5c3b293eb91",
            "owner_id": "131289783853",
            "tags": {
              "Name": "VPC_PROD"
            },
            "tags_all": {
              "Name": "VPC_PROD"
            }
          }
        }
      ]
    }
  ]
}